# Course_Project_mailing

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
fixtures/: clients_fix.json  groups_fix.json  mailings_fix.json  messages_fix.json  send_attempts_fix.json  user_fix.json
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mailings.py
mailing/migrations/: 0001_initial.py  0002_rename_user_client.py  0003_client_owner_mailing_is_activated_mailing_owner_and_more.py  0004_alter_mailing_options.py  0005_alter_message_options.py  0006_alter_client_options_client_is_active.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  email_template.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_report.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  send_attempt_detail.html  send_attempt_form.html  send_attempt_list.html  user_confirm_delete.html  user_detail.html  user_form.html  user_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_groups.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options_alter_user_is_active.py
users/templates/users/: email_verification.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html  user_form.html  (+2 more)
(+1 files in other folders)
