[tool.poetry]
name = "course-project-mailing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "course_project_mailing"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
